--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/public/C:\Users\punkp\OneDrive\Documenti\personal_projects\erp_example\storage\framework\views
+/public/C:\Users\punkp\OneDrive\Documenti\personal_projects\erp_example\storage\framework\logs
